# fastapi-amis-admin-sync

./: .gitignore  KNOWN_ISSUES.md  README.md  any_types_analysis_report.json  debug_badge_object.py  debug_schema.py  generate.js  generate.py  generated_models_analysis_report.json  models.py  package-lock.json  package.json  pyproject.toml  run_datamodel_codegen.py  schema-bundled.json  schema-bundled.yaml  update_models.py
.github/workflows/: update-amis-schema.yml
examples/: basic_example.py
fastapi_amis_admin/: __init__.py
fastapi_amis_admin/amis/: __init__.py  auto_generated_models.py  generated_models.py
schema/: schema_simplified.json  schema_translated.json
schemas/: schema-bundled.json
scripts/: analyze_generated_issues.py  analyze_schema_loss.py  clean_chinese.py  comprehensive_badge_fix.py  deep_analyze_any_types.py  deep_cleanup_schema.py  download_schema.py  final_schema_fix.py  find_duplicate_fields.py  fix_all_badge_fields.py  fix_all_json_schema_objects.py  fix_anyof_primitive_types.py  fix_badge_validation.py  fix_enum_duplicates.py  fix_malformed_badge_schema.py  fix_tplschema_specific.py  fix_union_types.py  generate_models.py  resolve_true_properties.py  simplify_schema.py  simplify_schema_improved.py  translate_schema.py
tests/: test_download_schema.py  test_example.py  test_generate_models.py
