[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-amis-admin"
version = "0.1.0"
description = "High-performance FastAPI admin framework with automated AMIS schema integration"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "FastAPI-AMIS-Admin Contributors"}
]
keywords = ["fastapi", "amis", "admin", "pydantic", "low-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "requests>=2.31.0",
    "datamodel-code-generator[http]>=0.25.0",
    "jsonref>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.282",
    "mypy>=1.4.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/fastapi-amis-admin-sync"
Documentation = "https://github.com/yourusername/fastapi-amis-admin-sync#readme"
Repository = "https://github.com/yourusername/fastapi-amis-admin-sync"
"Bug Tracker" = "https://github.com/yourusername/fastapi-amis-admin-sync/issues"

[project.scripts]
update-amis-models = "update_models:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
packages = ["fastapi_amis_admin", "fastapi_amis_admin.amis"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
